tests/negative/regression/r33.orng
fn main() -> Int { 
    main += match let const main = main ; 4 { _ => 3 } 
} 
